Fixed issue where wrap-guides didn't show up

--- a/stylesheets/edit-code-blocks.less
+++ b/stylesheets/edit-code-blocks.less
@@ -9,3 +9,11 @@
 .edit-code-blocks-view .panel-heading {
   padding-bottom: 0;
 }
+
+.panes .pane .edit-code-blocks-view .item-views {
+  display: block;
+}
+
+.edit-code-blocks-view .item-views .editor {
+  position: relative;
+}
